--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,8 +8,8 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *= require_self
- *= require jquery.ui.all
- *= require jquery-ui-timepicker-addon
+ * require jquery.ui.all
+ * require jquery-ui-timepicker-addon
  *= require bootstrap-editable
  *= require bootstrap-wysihtml5
  *= require social-share-button
@@ -34,7 +34,7 @@ body {
 	max-height:300px
 }
 .btn-social {
-    background-color: #DD4B39
+	background-color: #DD4B39;
 	background-image: none;
 }
 div.set_color {
