--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<meta property="wb:webmaster" content="d01aff26e2b6e07f" />
+	<meta property="qc:admins" content="0100233053730110060527351006375" />
 	
 	<title><%= content_for?(:title) ? yield(:title) : "Insoshi" %></title>
     <%= csrf_meta_tags %>
